tests/misc/rewriting_test/expected/004_crash_rewrite_if.php.expected
src/004_crash_rewrite_if.php:2 PhanInvalidNode Expected left side of assignment to be a variable
src/004_crash_rewrite_if.php:2 PhanSyntaxError syntax error, unexpected '=' (at column 14)
src/004_crash_rewrite_if.php:2 PhanUndeclaredGlobalVariable Global variable $p2 is undeclared
